official repository enabled

--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "jqlite",
     "web"
   ],
-  "homepage": "http://angularui.net",
-  "author": "Mehmet Otkun, angularui.net.",
+  "homepage": "http://quantumui.org",
+  "author": "Mehmet Otkun, quantumui.org",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "main": "angular-nojq.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/angularui/titip.git"
+    "url": "https://github.com/quantumui/titip.git"
   },
   "bugs": {
-    "url": "https://github.com/angularui/titip/issues"
+    "url": "https://github.com/quantumui/titip/issues"
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/angularui/titip/blob/master/LICENSE"
+    "url": "https://github.com/quantumui/titip/blob/master/LICENSE"
   },
   "devDependencies": {
   },
