--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "web"
   ],
   "license": "Apache 2",
-  "homepage": "http://angularui.net",
+  "homepage": "http://quantumui.org",
   "ignore": [
     "**/.*",
     "node_modules",
