--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-nojq",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "authors": [
-    "mehmetotkun <info@angularui.net>"
+    "mehmetotkun <info@quantumui.org>"
   ],
   "description": "Angular-NoJq is light weight native angular selector and dimension engine which includes some useful Jquery method for angular.element.",
   "main": [
@@ -24,6 +24,7 @@
     "**/.*",
     "node_modules",
     "bower_components",
+    "wwwroot",
     "test",
     "tests"
   ],
