--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-nojq",
   "description": "Angular-NoJq is light weight native angular selector and dimension engine which includes some useful Jquery method for angular.element.",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "keywords": [
     "angular",
     "selector",
@@ -29,8 +29,7 @@
     "type": "MIT",
     "url": "https://github.com/quantumui/titip/blob/master/LICENSE"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "engines": {
     "node": "~0.10.1"
   }
